# bookstore

./: Anotações.txt  README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/: factories.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
